--- a/BasicHistoryApi/app/src/main/AndroidManifest.xml
+++ b/BasicHistoryApi/app/src/main/AndroidManifest.xml
@@ -31,13 +31,14 @@ limitations under the License.
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity2"
-            android:label="@string/app_name" >
+        <receiver android:name="WeiWAProvider">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+
             </intent-filter>
-        </activity>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widgetinfo" />
+        </receiver>
     </application>
 </manifest>
